--- a/Manuscrit/main.org
+++ b/Manuscrit/main.org
@@ -1,5 +1,5 @@
 #+TITLE:Plan
-
+#+OPTIONS: tags:0
 # (setq org-export-latex-hyperref-format "\\ref{%s}")
 #+LaTeX_CLASS: article 
 #+LaTeX_CLASS_OPTIONS: [frenchb] 
@@ -7,7 +7,6 @@
 #+LaTeX_header:\usepackage[utf8]{inputenc}
 #+LaTeX_header:\usepackage[T1]{fontenc}
 #+LaTeX_header:\usepackage{babel}
-#+LaTeX_header:\usepackage[xindy,toc,acronym,nomain]{glossaries}
 #+LaTeX_header:\newglossary[angl]{anglicisme}{aot}{atn}{Anglicismes}
 #+LaTeX_header:\newcommand{\newangl}[3]{\newglossaryentry{#1}{type=anglicisme,name={\emph{#2}},description={#3}}}
 #+LaTeX_header:\makeglossaries
@@ -42,51 +41,51 @@
 
 * TAF :noexport:
 ** TODO Articuler les parties problème jouets
-* Axe de recherche
-** Contrôle optimal
-** Trouver la consigne à partir du contrôle
-*** Intérêt intrinsèque
+* Axe de recherche 
+** Contrôle optimal 
+** Trouver la consigne à partir du contrôle 
+*** Intérêt intrinsèque 
     Approches économiques, biologiques ou psychologiques.
-*** Imitation
+*** Imitation 
     Cadre général de  l'imitation, mentionner ici les approches sans formalisme \gls{mdp}, si il y en a qu'il est pertinent de mentionner.
-** Annonce du plan
-* Formalisme mathématique, notations
-** Imitation non \gls{irl}
+** Annonce du plan 
+* Formalisme mathématique, notations				       
+** Imitation non \gls{irl} 
 #<<hier:nonari>>
    Introduire état/action et politique, sans probabilités de transitions.
 
-   La classification permet d'apprendre par cœur la politique de l'expert. On ne se soucie pas de la structure temporelle du problème. Les capacités de généralisation du classifieur peuvent néanmoins deviner la structure de la politique si elle est simple.
+   La classification permet d'apprendre par cœur la politique de l'expert. On ne se soucie pas de la structure temporelle du problème. Les capacités de généralisation du classifieur dépendent des attributs utilisés.
 
    Décrire \cite{ratliff2007imitation}.
-** Cadre des \glspl{mdp} pour la prise de décision séquentielle
+** Cadre des \glspl{mdp} pour la prise de décision séquentielle 
    Probabilités de transitions, fonction de récompense, fonction de valeur, politique optimale. \gls{dp}.
 
    Approximation de la fonction de valeur, \gls{rl}. L'\gls{rl} permettant d'apprendre le contrôle par interaction avec le système, il possède quelques avantages sur le \gls{dp}, comme la possibilité de s'adapter à un milieu changeant par exemple.
 
    Pour appliquer l'\gls{rl} au monde réel, il est pratique d'exploiter efficacement les échantillons. Les échantillons sont très faciles à obtenir si on dispose d'un simulateur, et sont les seules données accessible sur certains systèmes. Pouvoir les exploiter en \gls{batch} et \gls{offpolicy} permet de contrôler beaucoup de types de systèmes différents (qui peut le plus peut le moins). \gls{lspi} \cite{lagoudakis2003least}.
-** Définition de l'\gls{irl}
-*** Définition du problème
+** Définition de l'\gls{irl} 
+*** Définition du problème 
    Cette section pose les notations qu'on utilisera dans tous le manuscrit, on ne cite pas l'état de l'art tout de suite (puisque les notions et notations entrent parfois en conflit, notamment en ce qui concerne l'attribut moyen) cela est reporté au chapitre d'après. Il s'agit de donner les acteurs et de préciser le problème que l'on résout, on ne rentre pas dans la description des problèmes qu'on va rencontrer tout de suite. C'est une section assez courte mais plutôt dense.
 
    Dans le cadre de l'\gls{rl}, trouver la consigne à partir du contrôle devient l'\gls{irl}. Il s'agit de retrouver la fonction de récompense à partir d'une politique optimale.
 
    Nuances importantes : le MDP est un modèle qui a des limites. Il faut que les états soient markoviens, il faut en pratique que l'espace d'action ne soit pas trop large, on suppose que l'expert agit de manière optimale pour une récompense sur ce MDP. Il faut donc que l'expert agisse effectivement de manière optimale (un humain peut faire des erreurs) et que la fonction de récompense existe, et soit exprimable sur l'espace d'état etc. Le problème qu'on étudie est bien celui de trouver la fonction de récompense (qui existe) d'un expert (qui est vraiment optimal).
 
-*** Attribut moyen
+*** Attribut moyen 
     L'approximation linéaire de la fonction de récompense induit (par le biais de la fonction de valeur) l'apparition de l'attribut moyen. C'est, comme nous allons le voir au chapitre suivant, une notion centrale en renforcement inverse. C'est un fonction vectorielle qui porte la structure temporelle du MDP (illustrer graphiquement sur le \gls{gridworld}, par exemple).
 
     Deux politiques ayant des attributs moyens similaires auront des valeurs similaires quelque soit la récompense (exprimée dans le schéma d'approximation linéaire) considérée. En revanche, il est possible d'avoir deux attributs moyens complètement différents et d'avoir la même valeur vis à vis de la "vraie" fonction de récompense (illustration sur le \gls{gridworld}, passage en haut à gauche et passage en bas à droite).
 * État de l'art et problématique
-** Fonction de récompense
+** Fonction de récompense 
 
    Récompense état ou état-action ? En changeant l'espace d'état, les deux sont équivalents. Le \gls{rewardshaping}   \cite{ng1999policy} étudie les changements que l'on peut appliquer à une récompense sans changer les politiques optimales.
 
-** Premières formulation du problème
+** Premières formulation du problème 
    Mentionné pour la première fois dans \cite{russell1998learning}. La formulation informée du problème \cite{ng2000algorithms} n'est pas bien posée. Deux solutions sont malgré tout proposées dont une fait déjà usage de l'attribut moyen, mais pas sous ce nom. La solution informée n'est pas celle qui nous intéresse pour les mêmes raisons qui nous font préférer l'\gls{rl} au DP (voir plus haut). La solution approchée est également problématique (FIXME:préciser pourquoi exactement).
 
    Détail important : dans l'\gls{rl}, on cherche le point fixe d'un opérateur attractif, il existe une solution et elle est unique. Dans l'\gls{irl} la solution n'est pas unique et il existe des solutions dégénérées. Résoudre le problème de l'\gls{irl} risque donc de s'avérer plus complexe que de résoudre le problème de l'\gls{rl}.
 
-** Méthodes nécessitant la résolution répétée d'un MDP
+** Méthodes nécessitant la résolution répétée d'un MDP 
    \cite{abbeel2004apprenticeship} propose \gls{pirl}, un algorithme qui sert de base à beaucoup d'autres solutions par la suite. L'idée est, par itérations successives sur la récompense, de rapprocher l'attribut moyen de l'agent et celui de l'expert. Pour une certaine notion de distance entre attributs moyens.  Cette approche fondatrice impose cependant des contraintes assez fortes :
    - il faut de manière répétée résoudre un MDP
    - il faut de manière répétée estimer l'attribut moyen d'une politique arbitraire et de la politique experte
@@ -109,7 +108,7 @@
    
    Citer les applications (acrobatie hélico p.e.) et expliquer comment ils ont contourné le problème (c'est dur à contourner, mais c'est faisable). Signaler que  ça serait bien pour ces applications si on disposait d'algorithmes n'ayant pas ces contraintes.
 
-** Méthodes ne nécessitant pas la résolution répétée d'un MDP
+** Méthodes ne nécessitant pas la résolution répétée d'un MDP 
    
    \cite{lopes2009active} : définir une métrique dans un MDP reste difficile.
 
@@ -122,19 +121,18 @@
 
    \gls{relent} fait sauter la plupart des contraintes qui nous préoccupent (argumentaire à rapprocher de \gls{maxent}) \cite{boularias2011relative}. Il suffit d'avoir des échantillons experts et des échantillons aléatoires. On est dans le cadre définit avant de commencer l'état de l'art, et non plus dans le cadre mal défini des approches qui on suivi \gls{pirl}.
 
-
-* \gls{lstdmu}
+* \gls{lstdmu} 
 #<<hier:lstdmu>>
-** Principe
+** Principe 
   On rappelle que l'attribut moyen est une grandeur centrale en renforcement (dit en [[Attribut moyen]]). Les algorithmes qui l'utilisent ne présupposent pas de moyen de le calculer. La méthode de base consiste à faire jouer un simulateur et faire une estimation de Monte-Carlo.
 
   L'attribut moyen est par sa définition une fonction de valeur vectorielle. \gls{lstd} peut donc être adapté pour l'approximer.
-** Avantages
+** Avantages 
   Les avantages que \gls{lstd} possède pour l'approximation de fonction de valeur : \gls{batch}, /offline/ et /sample-efficient/ sont transférés à l'approximation de l'attribut moyen.
 
   On peut ainsi estimer l'attribut moyen d'une politique arbitraire sans utiliser de simulateur et sans connaître les probabilités de transition.
 
-** Illustration 
+** Illustration							       
    En utilisant \gls{pirl} avec LSPI et \gls{lstdmu}$\mu$, on peut porter PIRL en mode /batch/ avec une perte de performance minimale, et que l'on peut mitiger en fonction de la quantité de données non expertes disponibles. Cela évite d'avoir à se servir d'un simulateur, qui n'est pas toujours disponible. En le modifiant pour qu'il sorte une récompense et non une politique on peut corriger les "erreurs de jeunesse" des algorithmes dans la lignée de \gls{pirl}. Ça reste non idéal cependant.
 * \gls{scirl}
 ** Liens entre classification et \gls{rl}
@@ -144,33 +142,33 @@
 
   Si l'on utilise un classifieur où cette fonction de score/qualité est approximée par un schéma linéaire, alors on retombe sur l'attribut moyen. Il faut encore approximer celui-ci, mais cela est courant dans la littérature, et surtout c'est précisément le problème résolu par \gls{lstdmu} (en [[hier:lstdmu]]). 
 
-** Description
-** Validation théorique
-** Validation pratique rapide (problèmes jouets)
-** Mise en relief de l'influence des paramètres
-** Conclusion
+** Description 
+** Validation théorique 
+** Validation pratique rapide (problèmes jouets) 
+** Mise en relief de l'influence des paramètres 
+** Conclusion 
    SCIRL résout tous les problèmes des premiers algorithmes d'IRL et a de meilleures performances que \gls{maxent}. Il est théoriquement simple à expliquer et résout bien le problème de l'\gls{irl} tel qu'on l'a formulé. Il peut fonctionner avec uniquement des données de l'expert, ce qui ouvre la porte à des applications réelles.
-* SCIRLBoost
-** Problème de la définition des fonctions de base
-** Description de l'algorithme
-** Validation sur les problèmes jouets
-* Cascading
+* SCIRLBoost 
+** Problème de la définition des fonctions de base  
+** Description de l'algorithme 
+** Validation sur les problèmes jouets 
+* Cascading 
 #<<hier:cascading>>
-** Description
-*** Description
-*** Différences de concept avec SCIRL
-** Validation théorique
-** Validation pratique rapide (problèmes jouets)
-** Mise en relief de l'influence des paramètres
-** Comparaison pratique rapide de SCIRL et Cascading
-** Conclusion
+** Description 
+*** Description 
+*** Différences de concept avec SCIRL 
+** Validation théorique 
+** Validation pratique rapide (problèmes jouets) 
+** Mise en relief de l'influence des paramètres 
+** Comparaison pratique rapide de SCIRL et Cascading 
+** Conclusion 
    Cascading a des performances similaires à SCIRL et est encore plus flexible, puisque des méthodes supervisées non paramétriques (ou à détermination automatique de paramètres) peuvent être employées, ce qui en plus de résoudre les problèmes structurels de PIRL, résout les problèmes plus fondamentaux de l'approximation linéaire de la fonction de valeur ou du choix des attributs.
-* (Validation expérimentale)
-* Rappel des contributions
-* Perspectives de recherche
-* Bibliographie
+* (Validation expérimentale) 
+* Rappel des contributions 
+* Perspectives de recherche 
+* Bibliographie 
 \bibliographystyle{plainnat}
 \bibliography{Biblio}
-* Glossaire
+* Glossaire 
 #\printglossary[type=\acronymtype] 
 \printglossaries
